# observatory

./: .dockerignore  .gitignore  Dockerfile  build.sh  compose.prod.yml  compose.yml  deploy.fish  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build.yml
api/: GPS coordinates.bru  Get latest data.bru  Latest data.bru  Post data (timestamp).bru  Post data.bru  bruno.json  yaak.fl_7xfzwUjAJU.yaml  yaak.fl_JHB8gpciq9.yaml  yaak.fl_KTOf1kwLdZ.yaml  yaak.fl_LwpuZ4I4ZS.yaml  yaak.fl_QxjsCtwyRi.yaml  yaak.fl_R4ofHfJ7D8.yaml  yaak.fl_afqp1BHfih.yaml  yaak.rq_0BjjKRymsX.yaml  yaak.rq_7fcM8KzoQ0.yaml  yaak.rq_8lGw2biNm7.yaml  yaak.rq_BSO5lJ5vsg.yaml  yaak.rq_Gv2M5cunpa.yaml  yaak.rq_JZT1mxHpH6.yaml  yaak.rq_LBHIcwJg5e.yaml  yaak.rq_LIOVNxBZRl.yaml  yaak.rq_UjakHjKRzj.yaml  yaak.rq_XMQuqDXaKD.yaml  yaak.rq_aSotvpnv8j.yaml  yaak.rq_czliCLx96C.yaml  yaak.rq_l1XQq3DCPk.yaml  yaak.rq_mI6qiYAR3Y.yaml  yaak.wk_ggvGsdWanE.yaml
api/GPS/: Get GPS coordinates.bru  Post GPS data.bru
api/Weight/: Get weight.bru
api/environments/: omni.bru
service/: .gitignore  Cargo.toml
service/src/: auth.rs  buckets.rs  data.rs  emitters.rs  error.rs  gps.rs  main.rs  migration.rs  spa.rs  utils.rs
service/src/dashboards/: home_data.rs  mod.rs  weight.rs
service/src/endpoints/: mod.rs
service/src/endpoints/location/: mod.rs
service/src/endpoints/observatory/: mod.rs
service/src/endpoints/sensors/: mod.rs
service/src/endpoints/weight/: mod.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+44 files in other folders)
