[package]
name = "observatory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
axum = "0.7.5"
duckdb = { version = "1.0.0", features = ["bundled"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.6.1", features = ["trace"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"
