[package]
name = "observatory"
version = "0.1.21"
edition = "2021"

[profile.dev]
debug = 0
strip = "debuginfo"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.6"
axum-extra = { version = "0.9.4", features = ["cookie"] }
duckdb = { version = "1.0.0", features = ["bundled"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.6.1", features = ["trace"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"
uuid = { version = "1.10.0", features = ["v4"] }
jiff = "0.1.13"
thiserror = "1.0.64"
bcrypt = "0.15.1"
rand = "0.8.5"
dotenvy = "0.15.7"
